Add other pages and rearranged them into one folder (Student Module)

--- a/StudentModule/StudentDashboard.html
+++ b/StudentModule/StudentDashboard.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSense Student Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/aa11ee7bbf.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="icon-container">
+        <i class="fa-solid fa-bell"></i>
+        <i class="fa-solid fa-user"></i>
+    </div>
     <div class="container">
         <div class="sidebar">
             <h2>EduSense</h2>
             <p>Student Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;"></i><a href="#">Dashboard</a></li>
-                <li><a href="#">Attendance Records</a></li>
-                <li><a href="#">Grades</a></li>
-                <li><a href="#">Fee Balance</a></li>
-                <li><a href="#">Mentor Information</a></li>
-                <li><a href="#">Notifications</a></li>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="#">Dashboard</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="#">Attendance Records</a></li>
+                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="#">Grades</a></li>
+                <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="#">Fee Balance</a></li>
+                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="#">Mentor Information</a></li>
+                <li><i class="fa-solid fa-bell" style="color:#6F251B;"></i><a href="#">Notifications</a></li>
             </ul>
         </div>
         <div class="main-content">
