Minor UI changes

--- a/StudentModule/StudentDashboard.html
+++ b/StudentModule/StudentDashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSense Student Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/aa11ee7bbf.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -17,12 +17,12 @@
             <h2>EduSense</h2>
             <p>Student Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="#">Dashboard</a></li>
-                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="#">Attendance Records</a></li>
-                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="#">Grades</a></li>
-                <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="#">Fee Balance</a></li>
-                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="#">Mentor Information</a></li>
-                <li><i class="fa-solid fa-bell" style="color:#6F251B;"></i><a href="#">Notifications</a></li>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="/StudentModule/StudentDashboard.html">Dashboard</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/StudentModule/AttendanceRecords.html">Attendance Records</a></li>
+                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/StudentModule/Grades.html">Grades</a></li>
+                <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="/StudentModule/FeeBalance.html">Fee Balance</a></li>
+                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/StudentModule/MentorInformation.html">Mentor Information</a></li>
+                <li><i class="fa-solid fa-bell" style="color:#6F251B;"></i><a href="/StudentModule/Notifications.html">Notifications</a></li>
             </ul>
         </div>
         <div class="main-content">
