Managed to work on the Student, Attendance, FeeBalance and removed the notifications navigation on the side-nav

--- a/StudentModule/StudentDashboard.html
+++ b/StudentModule/StudentDashboard.html
@@ -22,18 +22,17 @@
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/StudentModule/Grades.html">Grades</a></li>
                 <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="/StudentModule/FeeBalance.html">Fee Balance</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/StudentModule/MentorInformation.html">Mentor Information</a></li>
-                <li><i class="fa-solid fa-bell" style="color:#6F251B;"></i><a href="/StudentModule/Notifications.html">Notifications</a></li>
             </ul>
         </div>
         <div class="main-content">
-                <h1>Welcome, Ian</h1>
+                <h1>Welcome</h1>
                 <div class="profile-info">
                     <img src="student.jpg" alt="Profile Picture">
                     <div class="student-details">
-                        <p><strong>Student Name :</strong> Ian Ogonjo</p>
-                        <p><strong>ID Number :</strong> 146450</p>
-                        <p><strong>Course :</strong> BBIT</p>
-                        <p><strong>Current Year :</strong> 4.1</p>
+                        <p><strong>Student Name :</strong></p>
+                        <p><strong>ID Number :</strong></p>
+                        <p><strong>Course :</strong></p>
+                        <p><strong>Current Year :</strong></p>
                     </div>
                 </div>
             <section>
@@ -45,15 +44,15 @@
                     <table>
                         <tr>
                             <td><strong>Mobile Number:</strong></td>
-                            <td>+254 748 444 576</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td><strong>Email Address (School):</strong></td>
-                            <td>ian.ogonjo@strathmore.edu</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td><strong>Email Address (Personal):</strong></td>
-                            <td>ianhubertomondi@gmail.com</td>
+                            <td></td>
                         </tr>
                     </table>
                 </div>
@@ -62,11 +61,11 @@
                     <table>
                         <tr>
                             <td><strong>Intake:</strong></td>
-                            <td>April-2018</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td><strong>Academic Status:</strong></td>
-                            <td>Active</td>
+                            <td></td>
                         </tr>
                     </table>
                 </div>
