Worked on the Grades, Attendance, MentorInformation and Student Dashboard/ basically done with the UI for Student module

--- a/StudentModule/AttendanceRecords.html
+++ b/StudentModule/AttendanceRecords.html
@@ -22,7 +22,6 @@
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/StudentModule/Grades.html">Grades</a></li>
                 <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="/StudentModule/FeeBalance.html">Fee Balance</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/StudentModule/MentorInformation.html">Mentor Information</a></li>
-                <li><i class="fa-solid fa-bell" style="color:#6F251B;"></i><a href="/StudentModule/Notifications.html">Notifications</a></li>
             </ul>
         </div>
         <div class="main-content">
@@ -64,7 +63,7 @@
                             <td><strong>Total hours</strong></td>
                             <td><strong>Absent classes </strong></td>
                             <td><strong>Absent hours</strong></td>
-                            <td><strong>Name</strong></td>
+                            <td><strong>Present Hours</strong></td>
                             <td><strong>Detail</strong></td>
                         </tr>
 
