--- a/StudentModule/StudentDashboard.html
+++ b/StudentModule/StudentDashboard.html
@@ -27,7 +27,7 @@
         <div class="main-content">
                 <h1>Welcome</h1>
                 <div class="profile-info">
-                    <img src="student.jpg" alt="Profile Picture">
+                    <img src="student.jpg" alt="">
                     <div class="student-details">
                         <p><strong>Student Name :</strong></p>
                         <p><strong>ID Number :</strong></p>
