--- a/StudentModule/FeeBalance.html
+++ b/StudentModule/FeeBalance.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="icon-container">
-        <i class="fa-solid fa-bell"></i>
-        <i class="fa-solid fa-user"></i>
-    </div>
+        <button class="logout-btn">
+            <i class="fa-solid fa-arrow-right-from-bracket"></i>Log Out
+        </button>
     <div class="container">
         <div class="sidebar">
             <h2>EduSense</h2>
