--- a/StudentModule/Grades.html
+++ b/StudentModule/Grades.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="icon-container">
-        <i class="fa-solid fa-bell"></i>
-        <i class="fa-solid fa-user"></i>
+        <button class="logout-btn">
+            <i class="fa-solid fa-arrow-right-from-bracket"></i>Log Out
+        </button>
     </div>
     <div class="container">
         <div class="sidebar">
