--- a/MentorModule/MentorDashboard.html
+++ b/MentorModule/MentorDashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduSense Student Dashboard</title>
+    <title>EduSense Mentor Dashboard</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/aa11ee7bbf.js" crossorigin="anonymous"></script>
 </head>
@@ -16,26 +16,22 @@
     <div class="container">
         <div class="sidebar">
             <h2>EduSense</h2>
-            <p>Student Navigation Panel</p>
+            <p>Mentor Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="/StudentModule/StudentDashboard.html">Dashboard</a></li>
-                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/StudentModule/AttendanceRecords.html">Attendance Records</a></li>
-                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/StudentModule/Grades.html">Grades</a></li>
-                <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="/StudentModule/FeeBalance.html">Fee Balance</a></li>
-                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/StudentModule/MentorInformation.html">Mentor Information</a></li>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="/MentorModule/MentorDashboard.html">Dashboard</a></li>
+                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/MentorModule/LogSession.html">Log Session</a></li>
             </ul>
         </div>
         <div class="main-content">
                 <h1>Welcome</h1>
                 <div class="personal-info">
-                    <h2>Student Information</h2>
+                    <h2>Mentor Information</h2>
                 <div class="profile-info">
                     <img src="student.jpg" alt="">
                     <div class="student-details">
-                        <p><strong>Student Name : Tatiana Omolleh</strong></p>
-                        <p><strong>ID Number : 149225</strong></p>
-                        <p><strong>Course : BICS</strong></p>
-                        <p><strong>Current Year : 3</strong></p>
+                        <p><strong>Mentor Name : Tatiana Omolleh</strong></p>
+                        <p><strong>StaffID : 149225</strong></p>
+                        <p><strong>Faculty : 149225</strong></p>
                     </div>
                 </div>
             <section>
@@ -57,16 +53,15 @@
                     </table>
                 </div>
                 <div class="academic-info">
-                    <h2>Academic Information</h2>
+                    <h2>Mentee Information</h2>
                     <table>
                         <tr>
-                            <td><strong>Intake:</strong></td>
-                            <td>2022</td>
+                            <td><strong>Student Name</strong></td>
+                            <td><strong>ID Number</strong></td>
+                            <td><strong>Course</strong></td>
+                            <td><strong>DropOut Status</strong></td>
                         </tr>
-                        <tr>
-                            <td><strong>Academic Status:</strong></td>
-                            <td>Active</td>
-                        </tr>
+
                     </table>
                 </div>
             </section>
