Managed to Work on the Admin Dashboard and View Analytics Page

--- a/LecturerModule/LecturerAttendanceRecords.html
+++ b/LecturerModule/LecturerAttendanceRecords.html
@@ -25,7 +25,7 @@
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/LecturerModule/RegisterUnits.html">Register Units</a></li>
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/LecturerModule/LecturerAttendanceRecords.html">Post Attendance Records</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/LecturerModule/InputGrades.html">Post Student Grades</a></li>
-                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/LecturerModule/">Mentor Login</a></li>
+                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/LecturerModule/MentorLogin.html">Mentor Login</a></li>
             </ul>
         </div>
         <div class="main-content">
