--- a/LoginForm.html
+++ b/LoginForm.html
@@ -68,7 +68,7 @@
 
         .left-section button {
             padding: 15px;
-            background-color: #2C2C2C;
+            background-color: #293040;
             color: #fff;
             border: none;
             border-radius: 5px;
