--- a/AdminModule/AdminDashboard.html
+++ b/AdminModule/AdminDashboard.html
@@ -3,43 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EduSense Lecturer Dashboard</title>
+    <title>EduSense Admin Dashboard</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/aa11ee7bbf.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="icon-container">
-        <button class="logout-btn">
-            <i class="fa-solid fa-arrow-right-from-bracket"></i>Log Out
+        <button class="analytics-btn" onclick="window.location.href='/AdminModule/ViewAnalytics.html'">
+            <i class="fa-solid fa-chart-simple"></i> View Analytics
         </button>
-    </div>
+        <button class="logout-btn">
+            <i class="fa-solid fa-arrow-right-from-bracket"></i> Log Out
+        </button>
+    </div>    
     <div class="container">
         <div class="sidebar">
             <h2>EduSense</h2>
-            <p>Lecturer Navigation Panel</p>
+            <p>Admin Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="/LecturerModule/LectuerDashboard.html">Dashboard</a></li>
-                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/LecturerModule/RegisterUnits.html">Register Units</a></li>
-                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i><a href="/LecturerModule/LecturerAttendanceRecords.html">Post Attendance Records</a></li>
-                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/LecturerModule/InputGrades.html">Post Student Grades</a></li>
-                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i><a href="/LecturerModule/MentorLogin.html">Mentor Login</a></li>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i><a href="/AdminModule/AdminDashboard.html">Admin Dashboard</a></li>
+                <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i><a href="/AdminModule/ManageUser.html">Manage User Accounts</a></li>
+                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i><a href="/AdminModule/ManageCourse.html">Manage Course Information</a></li>
+                <li><i class="fa-regular fa-bell" style="color:#6F251B;"></i></i><a href="/AdminModule/ViewAlerts.html">View Alerts & Predictions</a></li>
+                <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i><a href="/AdminModule/ViewPendingFees.html">View Pending Fees</a></li>
             </ul>
         </div>
         <div class="main-content">
                 <h1>Welcome</h1>
                 <div class="personal-info">
-                    <h2>Lecturer Information</h2>
+                    <h2>Faculty Admin Information</h2>
                 <div class="profile-info">
                     <img src="student.jpg" alt="">
                     <div class="student-details">
-                        <p><strong>Lecturer Name : Tatiana Omolleh</strong></p>
-                        <p><strong>Staff ID Number : 149225</strong></p>
+                        <p><strong>Admin Name :</strong></p>
+                        <p><strong>ID Number : 149225</strong></p>
                         <p><strong>Faculty : BICS</strong></p>
                     </div>
                 </div>
             <section>
                 <div class="personal-info">
-                    <h2>Additional Information</h2>
+                    <h2>Personal Information</h2>
                     <table>
                         <tr>
                             <td><strong>Mobile Number:</strong></td>
